--- a/assets/others/others.scss
+++ b/assets/others/others.scss
@@ -11,7 +11,6 @@ $boxShadow: #b9d5d999;
 
 * {
     margin: 0;
-    font-size: 18px;
     font-weight: normal;
     text-decoration: none;
     scroll-behavior: smooth;
@@ -60,102 +59,6 @@ body {
     }
 }
 
-.nav {
-    display: grid;
-    grid-template-columns: repeat(5, auto);
-    column-gap: 52px;
-    margin-left: 53px;
-    &-link {
-        font-family: Roboto Mono;
-        font-weight: 500;
-        color: $tertiary;
-        text-transform: uppercase;
-        line-height: 40px;
-        @include tr;
-        &:hover {
-            color: $secondary;
-        }
-    }
-}
-
-.header {
-    background: $primary;
-    min-height: 110px;
-    display: flex;
-    padding: 0 90px 0 220px;
-    align-items: center;
-    position: relative;
-    z-index: 2;
-    filter: drop-shadow(0px 1px 10px #12575b40);
-
-    &-container {
-        display: flex;
-        flex-direction: row;
-        position: absolute;
-        right: 90px;
-        max-width: 500px;
-        &__input {
-            background: $tertiary;
-            display: none;
-        }
-        &__search {
-            width: 32px;
-            height: 32px;
-            background-image: url(../icons/search.svg);
-            @include tr;
-            &:hover {
-                filter: drop-shadow(0 0 10px $tertiary);
-                transform: rotate(360deg);
-            }
-        }
-        &__login {
-            text-transform: uppercase;
-            color: $tertiary;
-            margin: 0 18px 0 50px;
-            @include tr;
-            &:hover {
-                color: $secondary;
-            }
-        }
-        &__signup {
-            text-transform: uppercase;
-            color: $tertiary;
-            border: 1px solid #c5e1e6;
-            border-radius: 100px;
-            @include tr;
-            &:hover {
-                background: $tertiary;
-                color: $secondary;
-                box-shadow: 0px 2px 50px $boxShadow;
-            }
-        }
-    }
-}
-
-.footer {
-    padding-left: 220px;
-    background: #196469;
-    min-height: 200px;
-    display: flex;
-    align-items: center;
-    position: relative;
-    &-container {
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        right: 92px;
-        bottom: 57px;
-    }
-    &-author {
-        font-size: 16px;
-        line-height: 19px;
-        letter-spacing: 1px;
-        text-align: right;
-        text-transform: uppercase;
-        color: #ffffff;
-    }
-}
-
 //---------Pop-ups---------//
 
 .btn-close {
@@ -175,7 +78,7 @@ body {
 
 #contact {
     display: none;
-    box-shadow: 0 0 500px #2d2d2d;
+
     padding: 45px 60px;
     position: fixed;
     top: 50%;
@@ -233,7 +136,7 @@ body {
 
 #feedback {
     display: none;
-    box-shadow: 0 0 500px #2d2d2d;
+
     padding: 45px 60px;
     position: fixed;
     top: 50%;
@@ -317,7 +220,7 @@ body {
 
 #donate {
     display: none;
-    box-shadow: 0 0 500px #2d2d2d;
+
     max-width: 568px;
     padding: 45px 60px;
     position: fixed;
@@ -473,7 +376,6 @@ body {
 
 .register {
     display: none;
-    box-shadow: 0 0 500px #2d2d2d;
     max-width: 568px;
     position: fixed;
     top: 50%;
@@ -592,4 +494,17 @@ body {
 
 .login-btn {
     margin-top: 30px;
+}
+
+.substrate {
+    display: none;
+    z-index: 4;
+    width: 100%;
+    height: 100%;
+    background: #2d2d2d;
+    opacity: 0.5;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
