--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -1,12 +1,163 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Mono:100,200,300,regular,500,600,700,100italic,200italic,300italic,italic,500italic,600italic,700italic);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic);
-.nav-link:nth-child(1) {
-  border-bottom: 2px solid;
+html {
+  font-size: 18px;
 }
 
 .header-hero {
   position: relative;
+}
+
+.nav {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (auto)[5];
+      grid-template-columns: repeat(5, auto);
+  -webkit-column-gap: 52px;
+          column-gap: 52px;
+  margin-left: 53px;
+}
+
+.nav-link {
+  font-family: Roboto Mono;
+  font-weight: 500;
+  font-size: 1rem;
+  color: #c5e1e5;
+  text-transform: uppercase;
+  line-height: 40px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.nav-link:hover {
+  color: #0d444d;
+}
+
+.nav-link:nth-child(1) {
+  border-bottom: 2px solid;
+}
+
+.header {
+  padding: 0 90px 0 220px;
+  background: #2a8086;
+  min-height: 110px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  margin-bottom: -2px;
+  z-index: 3;
+  -webkit-filter: drop-shadow(0px 1px 10px #12575b40);
+          filter: drop-shadow(0px 1px 10px #12575b40);
+}
+
+.header-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  position: absolute;
+  right: 90px;
+  max-width: 500px;
+}
+
+.header-container__input {
+  background: #c5e1e5;
+  display: none;
+}
+
+.header-container__search {
+  width: 32px;
+  height: 32px;
+  background-image: url(../../assets/icons/search.svg);
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.header-container__search:hover {
+  -webkit-filter: drop-shadow(0 0 10px #c5e1e5);
+          filter: drop-shadow(0 0 10px #c5e1e5);
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+}
+
+.header-container__login {
+  text-transform: uppercase;
+  color: #c5e1e5;
+  margin: 0 18px 0 50px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.header-container__login:hover {
+  color: #0d444d;
+}
+
+.header-container__signup {
+  text-transform: uppercase;
+  color: #c5e1e5;
+  border: 1px solid #c5e1e5;
+  border-radius: 100px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.header-container__signup:hover {
+  background: #c5e1e5;
+  color: #0d444d;
+  -webkit-box-shadow: 0px 2px 50px #b9d5d999;
+          box-shadow: 0px 2px 50px #b9d5d999;
+}
+
+.header-container__btn {
+  background: url(../../assets/icons/menu.svg) center no-repeat;
+  width: 35px;
+  height: 35px;
+}
+
+.menu {
+  -webkit-filter: drop-shadow(0px 1px 10px #12575b40);
+          filter: drop-shadow(0px 1px 10px #12575b40);
+  display: none;
+  margin-bottom: -2px;
+  z-index: 2;
+  background: #2a8086;
+  height: 100px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 30px;
+          column-gap: 30px;
+}
+
+.menu-link {
+  color: #c5e1e5;
+  font-family: Roboto Mono;
+  font-weight: 500;
+  font-size: 1rem;
+  color: #c5e1e5;
+  text-transform: uppercase;
+  line-height: 40px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.menu-link:hover {
+  color: #0d444d;
 }
 
 .hero {
@@ -35,14 +186,14 @@
 .hero-title {
   font-family: Rubik;
   color: #f3f7f8;
-  font-size: 72px;
+  font-size: 4rem;
   font-weight: 300;
 }
 
 .hero-title__span {
   font-family: Rubik;
   font-weight: 500;
-  font-size: 72px;
+  font-size: 4rem;
 }
 
 .hero-text {
@@ -81,8 +232,6 @@
 }
 
 .hero-image {
-  height: 666px;
-  width: 804px;
   position: relative;
 }
 
@@ -106,7 +255,7 @@
   font-family: Rubik;
   text-transform: uppercase;
   color: #0d444d;
-  font-size: 24px;
+  font-size: 1.33rem;
 }
 
 .about {
@@ -142,7 +291,7 @@
 }
 
 .about-container__text {
-  font-size: 14px;
+  font-size: 0.77rem;
   line-height: 20px;
   text-align: center;
   color: #0d444d;
@@ -179,9 +328,12 @@
   position: absolute;
 }
 
-.bg-image {
+.illustration {
   display: block;
   margin: auto;
+  background: url(../../assets/images/Illustrations-1.png) no-repeat center;
+  max-width: 1920px;
+  height: 550px;
 }
 
 .pets {
@@ -200,7 +352,7 @@
 
 .pets-title {
   font-family: Rubik;
-  font-size: 24px;
+  font-size: 1.33rem;
   line-height: 28px;
   text-transform: uppercase;
   color: #0d444d;
@@ -218,7 +370,7 @@
           box-sizing: border-box;
   border-radius: 100px;
   font-family: Roboto Mono;
-  font-size: 18px;
+  font-size: 1rem;
   line-height: 24px;
   width: 331px;
   height: 52px;
@@ -278,7 +430,7 @@
 }
 
 .pets-container__card {
-  width: 480px;
+  max-width: 480px;
   -webkit-box-shadow: 0px 2px 30px #0000000f;
           box-shadow: 0px 2px 30px #0000000f;
 }
@@ -325,12 +477,12 @@
   color: #2d2d2d;
   font-family: Roboto;
   font-weight: 500;
-  font-size: 24px;
+  font-size: 1.33rem;
   line-height: 28px;
 }
 
 .pets-container__card-text {
-  font-size: 16px;
+  font-size: 0.88rem;
   line-height: 19px;
   color: #919191;
 }
@@ -364,7 +516,7 @@
   top: 102px;
   margin-left: 220px;
   font-family: Rubik;
-  font-size: 24px;
+  font-size: 1.33rem;
   line-height: 28px;
   text-transform: uppercase;
   color: #c5e1e5;
@@ -441,7 +593,7 @@
 
 .pay-container__text {
   margin-top: 14px;
-  font-size: 14px;
+  font-size: 0.77rem;
   line-height: 20px;
   text-align: center;
   color: #c5e1e5;
@@ -469,7 +621,7 @@
   -ms-grid-row-span: 1;
   grid-row: 1 / 2;
   font-family: Rubik;
-  font-size: 24px;
+  font-size: 1.33rem;
   line-height: 28px;
   text-transform: uppercase;
   color: #0d444d;
@@ -524,7 +676,7 @@
 }
 
 .testimonials-container {
-  width: 480px;
+  max-width: 480px;
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2 / 3;
@@ -547,7 +699,7 @@
 }
 
 .testimonials-tcard__date {
-  font-size: 14px;
+  font-size: 0.77rem;
   line-height: 16px;
   color: #b3b3b3;
 }
@@ -557,7 +709,7 @@
   font-weight: 500;
   font-style: italic;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 0.88rem;
   line-height: 19px;
   color: #2d2d2d;
 }
@@ -575,7 +727,7 @@
 .testimonials-bcard__name {
   margin-left: 16px;
   font-style: italic;
-  font-size: 16px;
+  font-size: 0.88rem;
   line-height: 19px;
   font-weight: 500;
   color: #000;
@@ -599,7 +751,7 @@
   left: 220px;
   top: 0;
   font-family: Rubik;
-  font-size: 24px;
+  font-size: 1.33rem;
   line-height: 28px;
   text-transform: uppercase;
   color: #0d444d;
@@ -616,5 +768,41 @@
   opacity: 0.7;
   -webkit-transform: rotate(360deg);
           transform: rotate(360deg);
+}
+
+.footer {
+  background: #196469;
+  height: 200px;
+  padding-left: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.footer-container {
+  padding-left: 220px;
+  bottom: 56px;
+  right: 92px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: absolute;
+}
+
+.footer-author {
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 1px;
+  text-align: right;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 /*# sourceMappingURL=style.css.map */
